--- a/CSCI150_Project_Pages/mainStyleSheet.css
+++ b/CSCI150_Project_Pages/mainStyleSheet.css
@@ -15,7 +15,7 @@ p.commentText {
 
 a.commentSenderName {
     color: white;
-    font-size: 20;
+    font-size: 20px;
     font-family: fantasy;
     padding: 0px;
 }
@@ -25,7 +25,7 @@ div#comment_0 {
     background-color: #1154e6;
     color: black;
     height: 25px;
-    padding FONT-WEIGHT: 100;
+    FONT-WEIGHT: 100;
 }
 
 div#commentContainer {
@@ -33,7 +33,7 @@ div#commentContainer {
     margin-top: 25px;
     width: 500px;
     height: 75px;
-    padding: 10px 10;
+    padding: 10px 10px;
 }
 
 button {
@@ -63,10 +63,11 @@ body {
 }
 
 .logoText {
-    /* based on a 2:1 image ratio*/
+    /* based on a 5:1 image ratio*/
     display: inline-block;
-    width: 324px;
-    height: 64px;
+    width: 250px;
+    height: 50px;
+    padding-bottom: 4px;
 }
 
 .navbar {
@@ -156,11 +157,11 @@ table, th, td {
 /* Page Elements CSS*/
 
 .logoLogin {
-    /* based on a 4:3 image ratio*/
-    display: block; 
-    margin: 10px auto 50px auto;
-    width: 50%;
-    height: 10%;
+    /* based on a 5:1 image ratio*/
+    display: block;
+    width: 500px;
+    height: 100px;
+    margin: 10px auto;
 }
 
 .homePageContent {
@@ -242,6 +243,15 @@ form {
     width: 400px;
     margin: auto;
     padding: 5px;
+}
+
+.myTextArea {
+    width: 100%;
+    height: 200px;
+}
+
+.backToDir {
+    margin: 5px 25px;
 }
 
 .currentFilter{
@@ -514,19 +524,17 @@ input[type=submit] {
 }
 
 .pageSwap {
-    margin: 20px 50px;
+    margin: 20px 25px;
 }
 
 .prevPage {
     display: inline-block;
     float: left;
-    /* margin-left: 50px; */
 }
 
 .nextPage {
     display: inline-block;
     float: right;
-    /* margin-right: 50px; */
 }
 
 
@@ -598,7 +606,7 @@ img {
 .mapTitle{
     padding: 25px;
     text-align: center;
-    font-size: 30;
+    font-size: 30px;
 }
 
 .mapText{
@@ -613,6 +621,11 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.mapKeyHolder {
+    margin: 10px auto;
+    height: 60px;
 }
 
 .mapKey{
@@ -662,12 +675,12 @@ img {
     }
 
     .logoText {
-        /* based on a 2:1 image ratio*/
+        /* based on a 5:1 image ratio*/
         display: block;
-        max-width: 324px;
-        max-height: 64px;
+        width: 250px;
+        height: 50px;
         margin: 0 auto;
-        padding-bottom: 2px;
+        padding-bottom: 4px;
     }
 
     .navbar {
@@ -763,11 +776,11 @@ img {
 
     /* Page Elements CSS*/
     .logoLogin {
-        /* based on a 4:3 image ratio*/
+        /* based on a 5:1 image ratio*/
         display: block;
-        margin: 10px auto 50px auto;
-        width: 50%;
-        height: 10%;
+        width: 250px;
+        height: 50px;
+        margin: 10px auto;
     }
 
     .homePageContent {
@@ -846,9 +859,24 @@ img {
     form {
         background-color: #b3b3b3;
         border: 1px solid #8a8a8a;
-        width: 400px;
+        width: 300px;
         margin: auto;
         padding: 5px;
+    }
+    
+    .myTextArea {
+        width: 100%;
+        height: 200px;
+    }
+
+    .backToDir {
+        display: flex;
+        justify-content: center;
+    }
+    
+    .currentFilter {
+        width: 75%;
+        margin: 0px auto;
     }
 
     .loginBox {
@@ -863,7 +891,7 @@ img {
     .newUser {
         background-color: #b3b3b3;
         border: 1px solid #8a8a8a;
-        width: 400px;
+        width: 300px;
         margin: 20px auto;
         padding: 10px 5px 10px 5px;
     }
@@ -909,8 +937,8 @@ img {
         background-color: #1154e6;
     }
      #element.style {
-	width: 50;
-    	height: 30;
+	    width: 50px;
+    	height: 30px;
     	margin-top: 1%;
     	color: white;
     	background-color: #1154e6;
@@ -918,5 +946,126 @@ img {
     	cursor: pointer;
     	text-align: center;
      }
+
+    .mapHolder {
+        max-width: 70%;
+        max-height: 70%;
+        margin: auto;
+    }
+
+    .mapTitle {
+        padding: 25px;
+        text-align: center;
+        font-size: 30px;
+    }
+
+    .mapText {
+        padding: 45px 0;
+        text-align: center;
+        text-decoration: underline;
+    }
+
+    .mapLabels {
+        max-width: 50px;
+        max-height: 50px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .mapKeyHolder {
+        margin: 10px auto;
+    }
+
+    .mapKey {
+        text-align: center;
+        font-size: 20px;
+        padding: 10px;
+    }
+
+    .mapLocation {
+        margin: 0px auto;
+        width: 100%;
+        padding: 10px;
+        display: block;
+    }
+
+    .mapPhotos {
+        padding-bottom: 40px;
+    }
+
+    .messageContainer {
+        margin: 2px auto;
+        display: block;
+        border: 1px solid black;
+        width: 100%;
+        max-height: unset;
+        position: unset;
+    }
+
+    .messageSubject {
+        border-left: none;
+        font-size: 18px;
+        padding: 1px;
+        margin: 0;
+    }
+
+    .messageImage {
+        float: none;
+        margin: 5px auto;
+        display: block;
+        max-width: 300px;
+        max-height: 300px;
+    }
+
+    .inboxButtons {
+        width: 75%;
+        padding: 5px;
+        position: unset;
+        display: block;
+        margin-top: 2px;
+    }
+
+    .listingContainer {
+        margin: 0 auto;
+        display: block;
+        border: 1px solid black;
+    }
+
+    .listingImage {
+        display: block;
+        max-width: 100%;
+        max-height: 50vh;
+        height: auto;
+        margin: auto;
+    }
+
+    .listingBody {
+        border-left: unset;
+        font-size: 18px;
+        padding: 5px 0px;
+        margin: 2px;
+        width: unset;
+        display: block
+    }
+
+    .listingPoster {
+        border-left: unset;
+        border-top: 1px solid black;
+        margin-left: unset;
+        padding: 5px 2px;
+        display: block;
+        align-items: center;
+    }
+
+    .formBox2 {
+        width: 49%;
+        position: unset;
+        display: block;
+        bottom: 25%;
+        background-color: #ffffff;
+        border: none;
+        margin: auto;
+    }
 }
 
