--- a/CSCI150_Project_Pages/mainStyleSheet.css
+++ b/CSCI150_Project_Pages/mainStyleSheet.css
@@ -428,11 +428,10 @@ input[type=submit] {
 }
 
 .inboxButtons{
-    max-width: 50%;
+    width: 50%;
     bottom: 3px;
-    position: absolute;
+    margin: unset;
     display: flex;
-    
 }
 
 #button3 {
